[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-gmm-ops"
version = "0.1.0"
description = "Pure-Triton MoE operators: grouped GEMM, permute/unpermute, and fused kernels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "triton",
]

# The project dir is also named `triton_gmm_ops`, which makes setuptools
# collapse the package path onto the repo root (a namespace package with no
# __init__.py), breaking `from triton_gmm_ops import ...`. Map the package
# name to its real directory explicitly so a normal (non-editable) install
# copies the inner package into site-packages correctly.
[tool.setuptools]
package-dir = {"triton_gmm_ops" = "triton_gmm_ops"}
packages = ["triton_gmm_ops"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
